test/classes/errors/nilability-init-var/init-var-oknil-owned-from-nonnil-unmanaged.good
init-var-oknil-owned-from-nonnil-unmanaged.chpl:9: error: invalid copy-initialization
init-var-oknil-owned-from-nonnil-unmanaged.chpl:9: error: cannot initialize 'owned MyClass?' from a 'unmanaged MyClass'
